<resources>
    <string name="app_name">Mind Note</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="or_login_with">or login with</string>
    <string name="already_have_an_acount_log_in">Already Have an Acount? Log In</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="mind_note">Mind Note</string>
    <string name="options">OPTIONS</string>
    <string name="title">Title</string>
    <string name="cancel">Cancel</string>
    <string name="bullets_button" />
    <string name="checkboxes_button" />
    <string name="text_style_button" />
    <string name="underline_text_button" />
    <string name="note_subtitle">Note Subtitle</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>