<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignUp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_editext"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:text="@string/sign_up"
                android:textColor="#D3C6E9"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_signup_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_editext"
                android:drawableStart="@drawable/email"
                android:drawablePadding="5dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:paddingBottom="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/Purple"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/et_signup_pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/custom_editext"
                android:drawableStart="@drawable/lock_pswrd"
                android:drawablePadding="5dp"
                android:hint="@string/password"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:paddingBottom="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/Purple" />

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="@string/sign_up"
                android:textSize="24sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/Purple" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/or_login_with"
                android:textAlignment="center"
                android:textColor="@color/Purple" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_login_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/already_have_an_acount_log_in"
        android:textAlignment="center"
        android:textColor="#A99BD4" />

</LinearLayout>