<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_editext"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:text="@string/login"
                android:textColor="#D3C6E9"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_login_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_editext"
                android:drawableStart="@drawable/email"
                android:drawablePadding="5dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="18sp"
                android:padding="10dp"
                android:paddingBottom="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/Purple" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Password"
                app:hintTextColor="@color/Purple"
                app:passwordToggleEnabled="true"
                app:passwordToggleTintMode="src_atop"
                android:background="@color/Purple_DarkMainBG"
                android:layout_marginBottom="16dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_login_pass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/custom_editext"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:ems="15"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="@string/login"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_forgot_pass_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="40dp"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textColor="@color/Purple" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/Purple" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/or_login_with"
                android:textAlignment="center"
                android:textColor="@color/Purple" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_signup_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textAlignment="center"
        android:textColor="#A99BD4" />
</LinearLayout>